fixed jumbotron white space

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -15,10 +15,17 @@
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
-
+body {
+    margin-top:-20px;
+    
+}
+h1 {
+    margin-top: 0;
+}
 .jumbotron {
     padding:70px 30px 70px 30px;
     margin:0px;
+    margin-top: -50px;
     /* background: #7986CB ; */
     color:floralwhite;
     background-image: url("pexels-photo2.jpg")
